policies/readinessprobe-tcpsocket-host-initcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-readinessprobe-tcpsocket-host-initcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(ic,
          !has(ic.readinessProbe) ||
          !has(ic.readinessProbe.tcpSocket) ||
          !has(ic.readinessProbe.tcpSocket.host) ||
          ic.readinessProbe.tcpSocket.host == ""
        )
      message: >
        spec.initContainers[*].readinessProbe.tcpSocket.host must be undefined or empty ("").
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-readinessprobe-tcpsocket-host-initcontainers-namespace-optout-warn
spec:
  policyName: check-readinessprobe-tcpsocket-host-initcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/readinessprobe-tcpsocket-host-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-readinessprobe-tcpsocket-host-initcontainers-namespace-optin-warn
spec:
  policyName: check-readinessprobe-tcpsocket-host-initcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: readinessprobe-tcpsocket-host-initcontainers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-readinessprobe-tcpsocket-host-initcontainers-namespace-optout-audit
spec:
  policyName: check-readinessprobe-tcpsocket-host-initcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/readinessprobe-tcpsocket-host-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-readinessprobe-tcpsocket-host-initcontainers-namespace-optin-audit
spec:
  policyName: check-readinessprobe-tcpsocket-host-initcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: readinessprobe-tcpsocket-host-initcontainers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-readinessprobe-tcpsocket-host-initcontainers-namespace-optout-deny
spec:
  policyName: check-readinessprobe-tcpsocket-host-initcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/readinessprobe-tcpsocket-host-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-readinessprobe-tcpsocket-host-initcontainers-namespace-optin-deny
spec:
  policyName: check-readinessprobe-tcpsocket-host-initcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: readinessprobe-tcpsocket-host-initcontainers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
